# src/backend/services/cart-api/internal/docs/swagger.json
@@ -1,8 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a rest api for basket which saves items to redis server",
-        "title": "Basket API",
+        "description": "This is a rest api for cart which saves items to redis server",
+        "title": "Cart API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "API Support",
@@ -16,43 +16,6 @@
         "version": "1.0"
     },
     "paths": {
-        "/checkout": {
-            "post": {
-                "description": "Start checkout",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Checkout"
-                ],
-                "summary": "Starts checkout for the entered card and basket items",
-                "parameters": [
-                    {
-                        "description": "Checkout",
-                        "name": "Checkout",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Checkout"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": ""
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/models.HTTPError"
-                        }
-                    }
-                }
-            }
-        },
         "/items": {
             "post": {
                 "description": "add by json new CustomerBasket",
@@ -73,7 +36,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.CustomerBasket"
+                            "$ref": "#/definitions/models.Cart"
                         }
                     }
                 ],
@@ -81,11 +44,23 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.CustomerBasket"
+                            "$ref": "#/definitions/models.Cart"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/models.HTTPError"
                         }
@@ -119,11 +94,17 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.CustomerBasket"
+                            "$ref": "#/definitions/models.Cart"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/models.HTTPError"
                         }
@@ -160,103 +141,47 @@
                         "schema": {
                             "$ref": "#/definitions/models.HTTPError"
                         }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.HTTPError"
+                        }
                     }
                 }
             }
         }
     },
     "definitions": {
-        "models.Address": {
+        "models.Cart": {
             "type": "object",
             "properties": {
-                "city": {
+                "currency": {
                     "type": "string"
                 },
-                "country": {
-                    "type": "string"
-                },
-                "state": {
-                    "type": "string"
-                },
-                "street_address": {
-                    "type": "string"
-                },
-                "zip_code": {
-                    "type": "integer"
-                }
-            }
-        },
-        "models.BasketItem": {
-            "type": "object",
-            "properties": {
-                "food_id": {
-                    "type": "integer"
-                },
-                "food_name": {
-                    "type": "string"
-                },
-                "old_unit_price": {
-                    "type": "number"
-                },
-                "picture": {
-                    "type": "string"
-                },
-                "quantity": {
-                    "type": "integer"
-                },
-                "unit_price": {
-                    "type": "number"
-                }
-            }
-        },
-        "models.Checkout": {
-            "type": "object",
-            "properties": {
-                "address": {
-                    "$ref": "#/definitions/models.Address"
-                },
-                "credit_card": {
-                    "$ref": "#/definitions/models.CreditCardInfo"
-                },
-                "customer_id": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "user_currency": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.CreditCardInfo": {
-            "type": "object",
-            "properties": {
-                "credit_card_cvv": {
-                    "type": "integer"
-                },
-                "credit_card_expiration_month": {
-                    "type": "integer"
-                },
-                "credit_card_expiration_year": {
-                    "type": "integer"
-                },
-                "credit_card_number": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.CustomerBasket": {
-            "type": "object",
-            "properties": {
-                "customer_id": {
+                "id": {
                     "type": "string"
                 },
                 "items": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.BasketItem"
+                        "$ref": "#/definitions/models.LineItem"
                     }
+                },
+                "status": {
+                    "type": "string"
+                },
+                "total": {
+                    "type": "number"
+                },
+                "user_id": {
+                    "type": "string"
                 }
             }
         },
@@ -270,6 +195,33 @@
                 "message": {
                     "type": "string",
                     "example": "status bad request"
+                }
+            }
+        },
+        "models.LineItem": {
+            "type": "object",
+            "properties": {
+                "attributes": {
+                    "type": "object",
+                    "additionalProperties": true
+                },
+                "img": {
+                    "type": "string"
+                },
+                "item_id": {
+                    "type": "integer"
+                },
+                "product_description": {
+                    "type": "string"
+                },
+                "product_name": {
+                    "type": "string"
+                },
+                "quantity": {
+                    "type": "integer"
+                },
+                "unit_price": {
+                    "type": "number"
                 }
             }
         }
