# src/backend/services/cart-api/internal/models/cart.go
@@ -16,14 +16,9 @@ type LineItem struct {
 // Cart
 type Cart struct {
 	ID            uuid.UUID   `json:"id"`
-	LineItems     *[]LineItem `json:"items"`
-	UserID        string      `json:"user_id"`
+	LineItems     []LineItem `json:"items"`
+	UserID        *string     `json:"user_id"`
 	Total         float32     `json:"total"`
-	Tax           float32     `json:"tax"`
-	Discount      float32     `json:"discount"`
-	Shipping      float32     `json:"shipping"`
 	Currency      string      `json:"currency"`
 	Status        string      `json:"status"`
-	PaymentMethod string      `json:"payment_method"`
-	PaymentID     string      `json:"payment_id"`
 }
